Minor naming changes
